syntax = "proto3";

option csharp_namespace = "GrpcService_01";

package GrpcServiceTry;

// The greeting service definition.
service Greeter {
	// Sends a greeting
	rpc SayHello (HelloRequest) returns (HelloReply);

}

service AutoresGrpc{
  
	rpc Autores (RequestModel) returns (ReplyModel);

}


//--------------------------------------------------------------------------------------------
//--------------------------------------------------------------------------------------------
//--------------------------------------------------------------------------------------------
//--------------------------------------------------------------------------------------------
//--------------------------------------------------------------------------------------------

// modelos de ejemplo 
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

//--------------------------------------------------------------------------------------------
//--------------------------------------------------------------------------------------------

// mis modelos

message RequestModel{

}

message ReplyModel {
  repeated AutoresModel Autor= 1;
}

message AutoresModel{
	int32 Id =1;
	string NombreCompleto=2;
	string image=3;

}

